--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
         }
 
         .snippet-bg {
-            background: url('https://twitter.com/i/status/1732348880556331014') center fixed;
+            background: url('/GAqKG_fawAAn_nt.mp4') center fixed;
             background-size: cover;
         }
 
