--- a/Index.html
+++ b/Index.html
@@ -110,7 +110,7 @@
                 }
             }
 
-            if (input === 'ezsnippet' || 'snippet') {
+            if (input === 'ezsnippet' || input === 'snippet') {
                 resultElement.innerText = 'Background changed for ezsnippet!';
                 body.classList.remove('thala-bg', 'no-thala-bg');
                 body.classList.add('snippet-bg');
