--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
         }
 
         .snippet-bg {
-            background: url('/GAqKG_fawAAn_nt.mp4') center fixed;
+            background: url('./GAqKG_fawAAn_nt.mp4') center fixed;
             background-size: cover;
         }
 
@@ -110,7 +110,7 @@
                 }
             }
 
-            if (input === 'ezsnippet' || input === 'snippet') {
+            if ( input === 'snippet') {
                 resultElement.innerText = 'Background changed for ezsnippet!';
                 body.classList.remove('thala-bg', 'no-thala-bg');
                 body.classList.add('snippet-bg');
