--- a/Index.html
+++ b/Index.html
@@ -58,7 +58,7 @@
         }
 
         .snippet-bg {
-            background: url('/GAqKG_fawAAn_nt.mp4') center fixed;
+            background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsrO9c_ihCDFtMy99t3uapO8JKqyNQs-puWg&usqp=CAU') center fixed;
             background-size: cover;
         }
 
