--- a/Index.html
+++ b/Index.html
@@ -115,6 +115,7 @@
                 body.classList.remove('thala-bg', 'no-thala-bg');
                 body.classList.add('snippet-bg');
             } else if (input.length === 7 || sum === 7) {
+                new Audio('bole-jo-koyal-ms-dhoni-thala-theme.mp3').play()
                 resultElement.innerText = 'Thala for a reason';
                 body.classList.remove('no-thala-bg', 'snippet-bg');
                 body.classList.add('thala-bg');
