--- a/index.html
+++ b/index.html
@@ -109,17 +109,35 @@
                     sum += parseInt(input[i]);
                 }
             }
+            const thalaaudio = new Audio('bole-jo-koyal-ms-dhoni-thala-theme.mp3');
+            const nothalaaudio = new Audio('tmptj_6rrcb.mp3');
+            const snippetaudio = new Audio('naughty-hora-ke-2.mp3');
+            const changeaudio = new Audio('quack_5.mp3');
+                 
 
             if (input === 'snippet') {
                 resultElement.innerText = 'Background changed for ezsnippet!';
                 body.classList.remove('thala-bg', 'no-thala-bg');
+                snippetaudio?.stop()
+                nothalaaudio?.stop()
+                changeaudio.play()
+                thalaaudio.play()
+
+
                 body.classList.add('snippet-bg');
             } else if (input.length === 7 || sum === 7) {
-                new Audio('bole-jo-koyal-ms-dhoni-thala-theme.mp3').play()
+                thalaaudio?.stop()
+                nothalaaudio?.stop()
+                changeaudio.play()
+                snippetaudio.play()
                 resultElement.innerText = 'Thala for a reason';
                 body.classList.remove('no-thala-bg', 'snippet-bg');
                 body.classList.add('thala-bg');
             } else {
+                snippetaudio?.stop()
+                thalaaudio?.stop()
+                changeaudio.play()
+                nothalaaudio.play()
                 resultElement.innerText = 'No Thala for a reason';
                 body.classList.remove('thala-bg', 'snippet-bg');
                 body.classList.add('no-thala-bg');
