--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <div class="container">
         <h1>Thala Checker</h1>
         <label for="inputText">Enter a word or number:</label>
-        <input type="text" id="inputText" oninput="checkThala()">
-        <button onclick="checkThala()">Submit</button>
+        <input type="text" id="inputText">
+        <button onclick="checkThala()">Check</button>
         <p id="result"></p>
         <div class="quote">"In the world of coding, simplicity is key – make the complex easy, and let your snippets speak like Thala"</div>
         <p class="note">Note: Please don't avoid using the word "snippet" in the input for accurate results.</p>
