--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
                     sum += parseInt(input[i]);
                 }
             }
-            const thalaaudio = new Audio('bole-jo-koyal-ms-dhoni-thala-theme.mp3').pause();
-            const nothalaaudio = new Audio('tmptj_6rrcb.mp3').pause();
+            const thalaaudio = new Audio('bole-jo-koyal-ms-dhoni-thala-theme.mp3');
+            const nothalaaudio = new Audio('tmptj_6rrcb.mp3');
             const snippetaudio = new Audio('naughty-hora-ke-2.mp3').pause();
-            const changeaudio = new Audio('quack_5.mp3').pause();
+            const changeaudio = new Audio('quack_5.mp3');
 
             if (input === 'snippet') {
                 resultElement.innerText = 'Background changed for ezsnippet!';
@@ -144,26 +144,32 @@
                 thalaaudio.play();
                 body.classList.add('snippet-bg');
             } else if (input.length === 7 || sum === 7) {
-                if (!thalaaudio.paused) {
-                    thalaaudio.pause();
+                if (!snippetaudio.paused) {
+                    snippetaudio.pause();
                 }
                 if (!nothalaaudio.paused) {
                     nothalaaudio.pause();
                 }
+                
+                if (thalaaudio.paused) {
                 changeaudio.play();
-                snippetaudio.play();
+                thalaaudio.play();
+                }
                 resultElement.innerText = 'Thala for a reason';
                 body.classList.remove('no-thala-bg', 'snippet-bg');
                 body.classList.add('thala-bg');
             } else {
-                if (!snippetaudio.paused) {
-                    snippetaudio.pause();
+                if (!nothalaaudio.paused) {
+                    nothalaaudio.pause();
                 }
                 if (!thalaaudio.paused) {
                     thalaaudio.pause();
                 }
+                if (nothalaaudio.paused) {
                 changeaudio.play();
-                nothalaaudio.play();
+                snippetaudio.play();
+                }
+                
                 resultElement.innerText = 'No Thala for a reason';
                 body.classList.remove('thala-bg', 'snippet-bg');
                 body.classList.add('no-thala-bg');
