--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 }
                 if (snippetaudio.paused) {
                     changeaudio.play();
-                    thalaaudio.play();
+                    snippetaudio.play();
                 }
                 body.classList.add('snippet-bg');
 
